Added name to lesson-plan.ipynb

--- a/lesson-plan.ipynb
+++ b/lesson-plan.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "### Questions\n",
     "* How to upload to learn? Don't do that..\n",
-    "* `git add` and `git commit` combine with `git commit -a`"
+    "* `git add` and `git commit` combine with `git commit -a`\n",
+    "\n",
+    "*Adding my name: Andrew Smith!"
    ]
   },
   {
