--- a/lesson-plan.ipynb
+++ b/lesson-plan.ipynb
@@ -210,7 +210,7 @@
     "    * moves you to a desired branch\n",
     "    \n",
     "* how do I check differences between branch and master? \n",
-    "    * "
+    "    * `git diff`"
    ]
   },
   {
